--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://sowmyasreethota96.github.io/Project 2/seam-carver/src/index.html">
+<meta http-equiv="refresh" content="0; url=https://sowmyasreethota96.github.io/Project 2/seam-carver/public/index.html">
