--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<meta http-equiv="refresh" content="0; url=https://sowmyasreethota96.github.io/Project 2/seam-carver/public/index.html">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://sowmyasreethota96.github.io/Project 2/seam-carver/public/index.html">
+  </head>
+</html>
