--- a/Project 2/seam-carver/public/index.html
+++ b/Project 2/seam-carver/public/index.html
@@ -1,4 +1,25 @@
-<!DOCTYPE html>
+<h1>Seam Carving</h1>
+<h2>CSCE 646</h2>
+<h2>Sowmya Thota</h2>
+<figure>
+    <p><img src="balloons.jpg"
+      alt="">
+    <figcaption>Original Image (313x500) before Seam Carving</figcaption>
+  </figure>
+  <img src = "https://benrbray.com/static/seam-carving/img/balloons.png" style="width:100px; height:120px">
+<figure>
+    <p><img src="image_energy.jpg"
+      alt="">
+    <figcaption>Image energy distribution</figcaption>
+</figure>
+
+<figure>
+    <p><img src="target_img.jpg"
+      alt="">
+    <figcaption>Final image(313x400) after retargeting using Seam Carving or Content-aware reshaping algorithm</figcaption>
+</figure>
+
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <h1>Hello World</h1>
@@ -42,3 +63,4 @@
     -->
   </body>
 </html>
+ -->
